[package]
name = "alumina-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["glow"] }
egui = { version = "0.27" }
# The following are only pulled in when compiling for the web target
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }
csgrs = { version = "0.18.0", default-features = false, features = ["delaunay", "f64", "stl-io", "dxf-io", "hashmap"] }
uuid = { version = "1.17", features = ["js", "v4"] }
glow = "0.13.1"
bytemuck = "1.23.1"
egui_glow = "0.27.2"
nalgebra = "0.33.2"
geo = "0.29"
futures = "0.3"                   # one-shot channel for the JS change-event
js-sys  = "0.3"
web-sys = { version = "0.3", optional = true, features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement", "File", "FileList",
    "Event", "EventTarget", "Blob",
] }
once_cell = "1.21.3"
console_log = "1.0.0"
log = "0.4.27"

[features]
default = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "console_error_panic_hook",
    "wasm-logger",
    "web-sys",
]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = false
