[package]
name = "alumina-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["glow"] }
egui = { version = "0.29.1" }
# The following are only pulled in when compiling for the web target
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
console_error_panic_hook = { version = "0.1" }
wasm-logger = { version = "0.2" }
csgrs = { version="0.19.1", default-features = false, features = ["delaunay", "f32", "stl-io", "dxf-io", "hashmap"] }
uuid = { version = "1.17", features = ["js", "v4"] }
glow = "0.14"
bytemuck = "1.23.1"
egui_glow = "0.29.1"
nalgebra = "0.33.2"
geo = "0.29"
futures = "0.3"
js-sys  = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement", "HtmlCanvasElement", "File", "FileList",
    "Event", "EventTarget", "Blob",
] }
once_cell = "1.21.3"
console_log = "1.0.0"
log = "0.4.27"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = false
