[package]
name = "alumina-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["glow"] }
egui = { version = "0.29.1", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
console_error_panic_hook = { version = "0.1", default-features = false }
csgrs = { version="0.19.1", default-features = false, features = ["delaunay", "f32", "stl-io", "dxf-io", "hashmap"] }
uuid = { version = "1.17", default-features = false, features = ["js", "v4"] }
glow = { version = "0.14", default-features = false }
bytemuck = { version = "1.23.1", default-features = false }
egui_glow = { version = "0.29.1", default-features = false }
nalgebra = { version = "0.33.2", default-features = false }
geo = { version = "0.29", default-features = false }
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
js-sys  = { version = "0.3", default-features = false }
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement", "HtmlCanvasElement", "File", "FileList",
    "Event", "EventTarget", "Blob",
] }
once_cell = { version = "1.21.3", default-features = false }
console_log = { version = "1.0.0", default-features = false }
log = { version = "0.4.27", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug-assertions = false
overflow-checks = false
panic = "abort"
incremental = false
